<resources>
    <string name="app_name">halalJava</string>
    <string name="action_settings">Settings</string>
    <string name="start_button">START</string>
    <string name="header">Hello World! Fabian</string>
    <string name="reset_button">reset</string>
    <string name="database_button">Add Item</string>
    <string name="item">Item</string>
    <string name="new_item">New</string>
    <string name="edit_item">Edit</string>
    <string name="delete_item">Delete</string>
    <string name="positive">+</string>
    <string name="negative">-</string>
    <string name="item_1">Hello No one</string>
    <string name="item_2">Hello World! Fabian</string>
    <string name="item_3">Hello World! E</string>

    <string-array name="category_expense_array">
        <item>Food</item>
        <item>Household</item>
        <item>Bill</item>
        <item>Debt</item>
        <item>Credit Card</item>
        <item>Other</item>
    </string-array>

    <string-array name="category_all_array">
        <item>Food</item>
        <item>Refund</item>
        <item>Income</item>
        <item>Household</item>
        <item>Bill</item>
        <item>Debt</item>
        <item>Unsub. Loan</item>
        <item>Sub. Loan</item>
        <item>Credit Card</item>
        <item>Other</item>
    </string-array>

    <string-array name="wallet">
        <item>Cash</item>
        <item>Debit</item>
        <item>Credit</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="halalJava">HalalJava</string>
    <string name="title_activity_navi">Navi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
