<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity" tools:layout_editor_absoluteY="56dp">

    <android.support.design.widget.TabLayout
            android:layout_width="395dp"
            android:layout_height="47dp"
            android:layout_marginTop="4dp" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/tabLayout" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0">

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_item"
        />

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_frag"
                android:text="@string/edit_item"/>

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_item"/>
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="399dp"
            android:layout_height="658dp" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" app:layout_constraintTop_toBottomOf="@+id/tabLayout"/>

</android.support.constraint.ConstraintLayout>