<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".newItem">

<include layout="@layout/navi_drawer"/>

<Button
            android:text="@string/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="72dp" android:layout_marginStart="72dp" android:layout_marginTop="116dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>

    <Button
            android:text="@string/database_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/database_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintVertical_bias="0.302"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="260dp"
            android:layout_height="62dp"
            android:id="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/categoryAll" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0">

        <android.support.design.widget.TextInputEditText
                android:layout_width="245dp"
                android:layout_height="48dp"
                android:id="@+id/itemTextField"
                android:hint="@string/item"
        />
    </android.support.design.widget.TextInputLayout>

    <Spinner
            android:layout_width="119dp"
            android:layout_height="44dp"
            android:id="@+id/categoryAll"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:layout_width="282dp"
            android:layout_height="59dp"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/item_amount"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>

    <RadioGroup android:layout_width="90dp" android:layout_height="82dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toEndOf="@+id/item_amount"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/categoryAll" android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0.0">
        <RadioButton
                android:text="@string/positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/positive_amount"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toEndOf="@+id/item_amount" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/negative_amount"/>
        <RadioButton
                android:text="@string/negative"
                android:layout_width="40dp"
                android:checked="true"
                android:layout_height="35dp" android:id="@+id/negative_amount"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toEndOf="@+id/item_amount" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>
    </RadioGroup>

</android.support.constraint.ConstraintLayout>